# cyberwave-edge-camera-driver

./: .gitignore  Dockerfile  LICENSE  README.md  entrypoint.sh  frame_filter.py  main.py  pyproject.toml
.github/workflows/: push-to-docker-hub.yml
tests/: conftest.py  test_detection_overlays.py  test_frame_filter.py  test_frame_filter_startup.py
