[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyberwave-edge-camera-driver"
version = "0.3.2"
description = "Cyberwave Edge Camera Driver for streaming camera feeds"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Cyberwave", email = "info@cyberwave.com"},
]
keywords = ["robotics", "camera", "streaming", "edge", "driver"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Pin the SDK to an exact version so rebuilds are deterministic. Without
    # this pin the Docker image content drifted across rebuilds because
    # ``pip install`` would resolve to whichever SDK / opencv-python wheel was
    # current at build time (see CYB-1998). The Dockerfile separately removes
    # the opencv-python wheel that the [camera] extra pulls in, because the
    # container relies on apt's V4L2-enabled python3-opencv instead.
    # [zenoh] is required for the same-host frame bus; publishing silently
    # degraded to WebRTC-only before 0.4.3 when eclipse-zenoh was missing.
    "cyberwave[camera,zenoh]==0.4.8",
    # NumPy 1.x for binary compatibility with Debian's ``python3-opencv``
    # 4.6.0, which is the cv2 binding we install via apt (see Dockerfile).
    # Without this cap, pip resolves the SDK's ``numpy>=1.26`` to the latest
    # NumPy 2.x; pip's 2.x install at /usr/local/... wins over apt's 1.24
    # at /usr/lib/python3/dist-packages/, and ``import cv2`` then dies with
    # ``ImportError: numpy.core.multiarray failed to import`` because apt's
    # cv2 was compiled against the NumPy 1.x C ABI. This bound resolves to
    # ``numpy>=1.26,<2`` from PyPI, which is ABI-compatible with the apt cv2.
    "numpy>=1.26,<2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
realsense = [
    "pyrealsense2>=2.50",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/cyberwave/cyberwave-edge-camera-driver"
Repository = "https://github.com/cyberwave/cyberwave-edge-camera-driver"
Issues = "https://github.com/cyberwave/cyberwave-edge-camera-driver/issues"

[tool.setuptools]
# Package structure: root-level modules + motors subpackage
# Since files are in root, we map the root to the package name
package-dir = {"" = "."}
packages = {find = {where = ["."]}}

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=term-missing"

